tests/paczka1/fuzzy1/65684122.err
Error in line 7: A580 A442 55,8
Error in line 10: iY7Qa2 A580 15,9
Error in line 16: liG489lMX A580 48,7
Error in line 26: iY7Qa2 A580 35,16
Error in line 18: iY7Qa2 S142 96,1
Error in line 28: iY7Qa2 A580 33,5
Error in line 31: iY7Qa2 S142 51,1
